# snake-game

./: .gitignore  CMakeLists.txt  README.md  main.py
cpp_engine/include/: Game.h  Grid.h  PathSolver.h  Snake.h
cpp_engine/include/algorithms/: Hamiltonian.h  PathSolver.h
cpp_engine/include/unweighted_algorithms/: BFS.h  DFS.h  Hamiltonian.h
cpp_engine/src/: Game.cpp  Grid.cpp  Snake.cpp  main.cpp
cpp_engine/src/algorithms/: BFS.cpp  DFS.cpp  Hamiltonian.cpp
cpp_engine/src/unweighted_algorithms/: BFS.cpp  DFS.cpp  Hamiltonian.cpp
